--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSDocumentsUsageDescription</key>
+	<string>Dosyalarınıza erişmek için izin gereklidir.</string>
+	<key>UIFileSharingEnabled</key>
+<true/>
 </dict>
 </plist>
