--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod: ^2.5.1
   easy_localization: ^3.0.7
   go_router: ^14.6.3
   just_audio: ^0.9.43
   drift: ^2.24.0
   drift_flutter: ^0.2.4
-  drift_dev: ^2.24.0
+  file_picker: ^8.1.7
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  lottie: ^3.3.1
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +57,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
+  drift_dev: ^2.24.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -95,6 +100,7 @@ flutter:
     - assets/icons/
     - assets/fonts/
     - assets/images/
+    - assets/json/
 
 
   #
