--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 0.0.1+001
 
 environment:
   sdk: ^3.6.0
@@ -53,6 +53,9 @@ dependencies:
   flutter_media_metadata: ^1.0.0+1
   url_launcher: ^6.3.1
   in_app_review: ^2.0.10
+  adapty_flutter: ^3.3.2
+  firebase_analytics: ^11.4.3
+  firebase_core: ^3.12.0
 
 
 dev_dependencies:
