--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   adapty_flutter: ^3.3.2
   firebase_analytics: ^11.4.3
   firebase_core: ^3.12.0
+  app_tracking_transparency: ^2.0.6+1
 
 
 dev_dependencies:
